test width height img logo

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -3,8 +3,8 @@
 /* logo */
 
 #header .logo {
-    max-width: 400px;
-    max-height: 120.75px;
+    width: 400px;
+    height: 120.75px;
 }
 
 .top-menu {
