--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -114,7 +114,7 @@
                 margin: 0 auto;
                 img {
                     height: 30px;
-                    width: auto;
+                    width: 30px;
 
                     @media (max-width: 480px) {
                         width: auto;
