--- a/assets/scss/categorie-grid.scss
+++ b/assets/scss/categorie-grid.scss
@@ -1,5 +1,4 @@
 @import "global.scss";
-
 #custom-categories-container {
     margin-top: 40px;
     .featured-block-title {
@@ -10,8 +9,7 @@
 .block-category img {
     max-width: 840px!important;
     max-height: 293.95px!important;
-
-    @media (max-width:1200px) {
+    @media (max-width: 1200px) {
         max-width: 100%!important;
     }
 }
@@ -30,10 +28,9 @@
 
 .categories-preview {
     img {
-        max-width: 275px;
+        width: 100%;
         height: 150px;
         object-fit: cover;
-
         @media (max-width: 1200px) {
             max-width: 100%;
         }
