--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -114,7 +114,7 @@
                 margin: 0 auto;
                 img {
                     height: 30px;
-                    width: 30px;
+                    width: auto;
 
                     @media (max-width: 480px) {
                         width: auto;
@@ -162,6 +162,7 @@
 
                                 > p {
                                     padding-left: 0;
+                                    margin-top: 10px;
                                 }
                             }
                         }
