--- a/assets/scss/command.scss
+++ b/assets/scss/command.scss
@@ -49,9 +49,11 @@
                 .cart-grid-body {
                     .label {
                         position: relative;
+                        padding-left: 25px;
                         i {
                             position: absolute;
                             line-height: inherit;
+                            left: 0;
                         }
                         span {
                             margin-left: 25px;
