--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -23,3 +23,8 @@ $unna: 'Unna';
     line-height: inherit;
     background-color: $blue!important;
 }
+
+.product-description {
+    border-left: 1px solid $black;
+    padding-left: 10px;
+}
