--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -12,8 +12,20 @@
                         a {
                             figure {
                                 img {
-                                    width: 1160px;
-                                    height: 493.61px;
+                                    @media (min-width: 1200px) {
+                                        width: 1160px;
+                                        height: 493.61px;
+                                    }
+
+                                    @media (max-width: 1200px) {
+                                        width: 100%;
+                                        height: auto;
+                                    }
+
+                                    @media (max-width: 480px) {
+                                        max-width: 345px;
+                                        max-height: 164.80px;
+                                    }
                                 }
                             }
                         }
@@ -73,8 +85,6 @@
                                 z-index: 0;
                                 width: 100%;
                                 bottom: 2px;
-                                border-left: 1px solid $black;
-                                padding-left: 10px;
                                 h3 {
                                     text-align: left;
                                     text-transform: lowercase;
