--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -6,10 +6,10 @@
     width: 400px;
     height: 120.75px;
 
-    @media (max-width: 480px) {
-        max-width: 240px;
-        max-height: 72.453px;
-    }
+    // @media (max-width: 480px) {
+    //     max-width: 240px;
+    //     max-height: 72.453px;
+    // }
 }
 
 .top-menu {
