--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -91,16 +91,13 @@
                     }
                 }
             }
-
             .block_newsletter {
                 .row {
                     @media (max-width: 768px) {
                         padding-left: 15px;
                     }
-
-                    > p {
+                    >p {
                         @media (max-width: 768px) {
-
                             padding: 0;
                         }
                     }
@@ -109,18 +106,30 @@
         }
     }
     .blockreassurance {
-        .block-icon,
-            .block-icon {
-                margin: 0 auto;
-                img {
-                    height: 30px;
-                    width: auto;
-
-                    @media (max-width: 480px) {
-                        width: auto;
+        .row {
+            .offset-md-0 {
+                .block-icon {
+                    margin: 0 auto;
+                    img {
+                        height: 30px;
+                        @media (max-width: 480px) {
+                            width: auto;
+                        }
+                    }
+                }
+                &:nth-child(1) {
+                    img {
+                        width: 52px;
+                    }
+                }
+                &:nth-child(2),
+                &:nth-child(3) {
+                    img {
+                        width: 30px;
                     }
                 }
             }
+        }
         .block-title {
             margin-left: 30px;
             font-style: italic;
@@ -138,29 +147,24 @@
                     padding-left: 15px!important;
                 }
             }
-
             .row {
                 p {
                     @media (min-width: 1200px) {
                         padding-left: 0;
                     }
                 }
-                > div {
+                >div {
                     padding-left: 0;
                     @media (max-width: 480px) {
                         padding-left: 15px;
                     }
-
-
                     form {
                         .row {
                             margin-left: 0;
                             padding-left: 0;
-
                             div {
                                 padding-left: 0;
-
-                                > p {
+                                >p {
                                     padding-left: 0;
                                     margin-top: 10px;
                                 }
