nous connaître img size (2)

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -243,14 +243,13 @@
         margin-bottom: 60px;
     }
 }
-
 .chapter {
     margin-bottom: 20px;
 
     a {
         img {
-            width: 314px;
-            height: 403px;
+            max-width: 314px!important;
+            max-height: 403px!important;
         }
     }
 }
