nous connaître img size (4)

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -238,18 +238,24 @@
 }
 
 /*Nous connaître*/
-.introduction {
-    .block-container {
-        margin-bottom: 60px;
-    }
-}
-.chapter {
-    margin-bottom: 20px;
 
-    a {
-        img {
-            max-width: 314px!important;
-            max-height: 403px!important;
+#content {
+    .introduction {
+        .block-container {
+            margin-bottom: 60px;
+        }
+    }
+
+    .chapters {
+        .chapter {
+            margin-bottom: 20px;
+        
+            a {
+                img {
+                    max-width: 314px!important;
+                    max-height: 403px!important;
+                }
+            }
         }
     }
 }
