nous connaître img size (5)

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -247,6 +247,8 @@
     }
 
     .chapters {
+        background-color: red;
+        
         .chapter {
             margin-bottom: 20px;
         
