--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -87,7 +87,6 @@
                                 bottom: 2px;
                                 h3 {
                                     text-align: left;
-                                    text-transform: lowercase;
                                     border-left: 0;
                                     padding:0;
                                     a {
@@ -95,6 +94,14 @@
 
                                         &:hover {
                                             color: $black;
+                                        }
+                                    }
+                                }
+
+                                .h3 {
+                                    a {
+                                        &::first-letter {
+                                            text-transform: lowercase;
                                         }
                                     }
                                 }
