--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -83,9 +83,12 @@
                     &:nth-child(2) {
                         .h1 {
                             padding-left: 8px;
-                            text-transform: lowercase;
-                            line-height: 0.9;
+                            line-height: 1.1;
                             border-left: 1px solid $black;
+
+                            &::first-letter {
+                                text-transform: lowercase;
+                            }
                         }
                         .product-information {
                             > div {
