--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -23,3 +23,20 @@ $unna: 'Unna';
     line-height: inherit;
     background-color: $blue!important;
 }
+
+
+.h3 {
+    a {
+        font-size: 24px;
+        display: block;
+        text-align: left!important;
+
+        &:hover {
+            color: $black;
+        }
+    }
+
+    a::first-letter {
+        text-transform: lowercase;
+    }
+}
