--- a/assets/scss/shop.scss
+++ b/assets/scss/shop.scss
@@ -26,7 +26,7 @@
                             span {
                                 position: absolute;
                                 bottom: 0;
-                                left: 25px;
+                                margin-left: 25px;
                                 @media (max-width: 468px) {
                                     position: relative;
                                 }
