--- a/assets/scss/filtre.scss
+++ b/assets/scss/filtre.scss
@@ -55,10 +55,17 @@
             a {
                 position: relative;
                 padding-left: 30px;
+                background-color: #fff;
+                font-size: 11px;
+                text-transform: uppercase;
+                border: 1px solid #000;
+                padding: .5rem 1.25rem;
+                padding-left: 30px;
+
                 i {
                     position: absolute;
                     left: 8px;
-                    bottom: 3px;
+                    bottom: 5px;
                 }
             }
         }
