--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -101,6 +101,7 @@
                                 font-weight: 400;
                                 font-family: 'AlegreyaSans';
                                 font-size: 16px;
+                                cursor: pointer;
                             }
 
                             &.current#category-79 {
@@ -110,12 +111,12 @@
                             }
                             &.current#category-78 {
                                 a {
-                                    color: #ff3e39;
+                                    color: #647b3f;
                                 }
                             }
                             &.current#category-80 {
                                 a {
-                                    color: #647b3f;
+                                    color: #ff3e39;
                                 }
                             }
                             &.current#category-40 {
