--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -12840,7 +12840,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #header #top-menu #category-78 a:hover {
-    color: #647B3F
+    color: #647B3F!important;
 }
 
 #header #top-menu #category-79 a:hover {
