--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -106,6 +106,9 @@
         }
     }
     .blockreassurance {
+        @media (max-width: 480px) {
+            margin-top: 30px;
+        }
         .row {
             .offset-md-0 {
                 .block-icon {
@@ -132,10 +135,15 @@
             }
         }
         .block-title {
-            margin-left: 30px;
+            margin-left: 10px;
             font-style: italic;
             font-family: 'AlegreyaSans';
             font-size: 12px;
+
+            @media (max-width: 480px) {
+                margin-left: 20px;
+                margin-top: 0;
+            }
         }
         border-top: 1px solid;
         border-bottom: 1px solid;
