--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -12840,7 +12840,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #header #top-menu #category-78 a:hover {
-    color: #FF3E39!important;
+    color: #647b3f;
 }
 
 #header #top-menu #category-79 a:hover {
@@ -12848,7 +12848,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #header #top-menu #category-80 a:hover {
-    color: #647B3F
+    color: #FF3E39!important
 }
 
 #header #top-menu #category-58 a:hover {
