--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -62,6 +62,13 @@
                         right: 0;
                         top: -35px;
 
+                        #_desktop-user_info {
+                            .user-info {
+                                margin-top: 0;
+                                padding: .75rem;
+                            }
+                        }
+
                         #_desktop_cart {
                             .header {
                                 margin-top: 0;
@@ -158,6 +165,7 @@
                         position: absolute;
                         right: 0;
                         top: 65px;
+
                         #_desktop_cart {
                             .cart-preview.active {
                                 background: $white;
