--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -12428,10 +12428,10 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 
 #header .header-nav .user-info {
     margin-left: 2.5rem;
-    margin-top: 0.9rem;
     text-align: right;
     white-space: nowrap;
     font-size:12px;
+    padding: .75rem
 }
 
 #header .header-nav .user-info .account {
@@ -12480,10 +12480,6 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 #header .header-nav .blockcart.active a:hover,
 #_desktop_user_info .user-info:hover {
     color: #232323;
-}
-
-#header .header-nav .blockcart .header {
-    margin-top: .125rem
 }
 
 #header .header-nav #_desktop_contact_link {
