fix user-card font-size and color menu

--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -12836,7 +12836,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #header #top-menu #category-78 a:hover {
-    color: #647b3f;
+    color: #FF3E39;
 }
 
 #header #top-menu #category-79 a:hover {
@@ -12844,7 +12844,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #header #top-menu #category-80 a:hover {
-    color: #FF3E39!important
+    color: #647b3f
 }
 
 #header #top-menu #category-58 a:hover {
