--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -72,6 +72,14 @@
                         #_desktop_cart {
                             .header {
                                 margin-top: 0;
+
+                                a {
+                                    span {
+                                        &:nth-child(2) {
+                                            font-size: 12px;
+                                        }
+                                    }
+                                }
                             }
                         }
                     }
@@ -118,12 +126,12 @@
                             }
                             &.current#category-78 {
                                 a {
-                                    color:#647b3f;
+                                    color:#ff3e39;
                                 }
                             }
                             &.current#category-80 {
                                 a {
-                                    color: #ff3e39;
+                                    color:#647b3f ;
                                 }
                             }
                             &.current#category-40 {
