--- a/assets/scss/log.scss
+++ b/assets/scss/log.scss
@@ -16,6 +16,7 @@
 
                     button {
                         width: 100%;
+                        height: 38px !important;
                     }
                 }
                 .forgot-password {
