--- a/assets/scss/shop.scss
+++ b/assets/scss/shop.scss
@@ -16,6 +16,7 @@
                         }
                         .product-line-info {
                             margin-left: 25px;
+                            margin-bottom: 8px;
                             a {
                                 font-size: 16px;
                                 font-weight: bold;
