--- a/assets/scss/shop.scss
+++ b/assets/scss/shop.scss
@@ -15,8 +15,11 @@
                             height: auto;
                         }
                         .product-line-info {
-                            margin-left: 25px;
                             margin-bottom: 8px;
+
+                            @media (max-width: 468px) {
+                                margin-left: 25px;
+                            }
                             a {
                                 font-size: 16px;
                                 font-weight: bold;
@@ -26,9 +29,10 @@
                             span {
                                 position: absolute;
                                 bottom: 0;
-                                margin-left: 25px;
+                                
                                 @media (max-width: 468px) {
                                     position: relative;
+                                    margin-left: 25px;
                                 }
                             }
                         }
