--- a/assets/scss/command.scss
+++ b/assets/scss/command.scss
@@ -61,6 +61,7 @@
                 .cart-grid-body {
                     .label {
                         position: relative;
+                        padding-left: 25px;
                         i {
                             position: absolute;
                             line-height: inherit;
