h2 recettes stars empty shop

--- a/assets/scss/command.scss
+++ b/assets/scss/command.scss
@@ -75,4 +75,11 @@
             }
         }
     }
+
+    .featured-products {
+        .h2 {
+            font-family: $roboto;
+            font-size: 13px;
+        }
+    }
 }
