--- a/assets/scss/command.scss
+++ b/assets/scss/command.scss
@@ -62,6 +62,7 @@
                     .label {
                         position: relative;
                         padding-left: 25px;
+
                         i {
                             position: absolute;
                             line-height: inherit;
@@ -70,6 +71,10 @@
                         span {
                             margin-left: 25px;
                         }
+                    }
+
+                    a::first-letter {
+                        text-transform: lowercase;
                     }
                 }
             }
