--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -4,19 +4,18 @@
     .footer-container {
         .row {
             .home_popup {
+                display: none;
+
                 #list-builder {
-                    opacity: 0;
+                    opacity: 0.5;
                 }
                 #popup-box {
-                    top: 85%;
-                    left: 350px;
-                    height: 48%;
+                    height: auto;
                     @media (max-width: 769px) {
                         width: 300px;
                         top: 50%;
                         left: 50%;
                         height: 100%;
-                        border: 1px solid $grey;
                         padding-bottom: 50px;
                     }
                     #popup-close {
@@ -25,8 +24,6 @@
                     }
                     #popup-box-content {
                         height: auto;
-                        border-top: 1px solid $grey;
-                        border-right: 1px solid $grey;
                         @media (max-width: 769px) {
                             border: none;
                         }
